sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value ecart
  ecart = getNombreValeurs()/2
  ^AlgShellSort:4: error: not found: value ecart
  while(ecart>0){
        ^AlgShellSort:8: error: not found: value ecart
    var j = i-ecart
              ^AlgShellSort:15: error: not found: value ecart
    ecart = ecart/2
    ^